Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Primera Página Web</title>
+    <title></title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -16,21 +16,13 @@
         </div>
         <ul class="nav-links">
             <li><a href="#inicio">Inicio</a></li>
-            <li><a href="juegos.html" target="_blank">Juegos</a></li>
-            <li><a href="encuestas.html" target="_blank">Encuestas</a></li>
+            <li><a href="Productos.html" target="_blank">Productos</a></li>
+            <li><a href="Conocenos.html" target="_blank">Conocenos</a></li>
           <li> <a href="Noticias.html"> Noticias</a></li>
             <li><a href="perfil.html" target="_blank">Perfil</a></li>
             <li class="dropdown">
-    <a href="login.html" class="dropbtn">Iniciar sesión</a>
-    <div class="dropdown-content">
-        <button onclick="googleSignIn()">Iniciar sesión con Google</button>
-        <h2>Inicio de sesión con correo electrónico</h2>
-        <input type="email" id="email" placeholder="Correo electrónico">
-        <input type="password" id="password" placeholder="Contraseña">
-        <button onclick="emailSignIn(document.getElementById('email').value, document.getElementById('password').value)">Iniciar sesión</button>
-        <button onclick="emailSignUp(document.getElementById('email').value, document.getElementById('password').value)">Registrarse</button>
-    </div>
-</li>
+    <a href="login.html" >Iniciar sesión</a>
+ 
         </ul>
     </nav>
   
